# StructuresCalculator

./: CMakeLists.txt  ExpressionTree.cpp  ExpressionTree.h  InputParser.cpp  InputParser.h  TreeCalculator.cpp  main.cpp
Controller/: InputParser.cpp  InputParser.h  TreeCalculator.cpp  TreeCalculator.h
Model/: main.cpp
View/: ConsoleHandler.cpp  ConsoleHandler.h  InputHandler.cpp  InputHandler.h
